Reorganised sidebar structure and fixed item flex overflow

--- a/src/Components/Sidebar/SnippetTable.module.scss
+++ b/src/Components/Sidebar/SnippetTable.module.scss
@@ -1,7 +1,6 @@
 @import "~@blueprintjs/core/lib/scss/variables";
 
 .table {
-  padding: $pt-grid-size;
   background-color: darken($pt-dark-app-background-color, 3);
   float: left;
   width: 20%;
@@ -11,6 +10,8 @@
 .header {
   display: flex;
   flex-direction: row;
+  padding: $pt-grid-size;
+  height: 7vh;
 }
 
 .search-field {
@@ -20,12 +21,15 @@
   margin-right: $pt-grid-size;
 }
 
-.body {
-  margin-top: $pt-grid-size;
+.item-container{
   flex: 1 1 auto;
   -webkit-flex: 1 1 auto;
   overflow-y: auto;
-  height: 95vh;
+  height: 93vh;
+}
+
+.body {
+  padding: $pt-grid-size;
 }
 
 .add-button {
